--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ function Change(){
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <p>&copy; Copyright kjhack.com. All rights reserved.</p>
+                        <p>&copy; Copyright clatbest.com. All rights reserved.</p>
                     </div>
                 </div>
             </div>
@@ -553,7 +553,4 @@ function Change(){
         <script src="js/jquery.magnific-popup.min.js"></script>
         <script src="js/main.js"></script>
     </body>
-
-
-<!-- Mirrored from mm.uptool.co/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 23 Dec 2021 12:52:31 GMT -->
 </html>
